[package]
name = "libsql_migration"
version = "0.1.0"
edition = "2024"
authors = ["prashant1k99"]
description = "A simple SQL migration tool for libsql databases"
license = "MIT"
repository = "https://github.com/prashant1k99/libsql_migration"
readme = "README.md"
keywords = ["libsql", "sqlite", "migration", "database", "sql"]
categories = ["database", "command-line-utilities"]

[dependencies]
reqwest = { version = "0.12.15", optional = true }
libsql = "0.9.4"
serde = { version = "1.0.219", optional = true }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["rt"] }

[features]
default = ["dir"]
dir = []
content = []
cloud = ["reqwest", "serde", "content"]
